# SD-Copy

./: ARCHITECTURE.md  FIXED.md  GITHUB-SETUP.md  GITHUB.md  LICENSE  QUICKSTART.md  README.md  SECURITY-CHECK.md  START_HERE.md  TROUBLESHOOTING.md  index.html  package-lock.json  package.json  push-to-github.sh  setup.sh  verify.sh
src/: App.css  App.tsx  main.tsx  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  create-icon.sh  icon.png.base64
src-tauri/src/: import.rs  main.rs  types.rs  utils.rs  volume.rs
src/components/: ProgressView.tsx  WizardModal.tsx
